// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions acceptedPricesUpdate 1`] = `
Object {
  "type": "beethovanAcceptedPrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions addressesUpdate 1`] = `
Object {
  "type": "beethovanAddresses",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions conversionsUpdate 1`] = `
Object {
  "type": "beethovanConversions",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions exchangePricesUpdate 1`] = `
Object {
  "type": "beethovanExchangePrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions fetchAcceptedPrices 1`] = `
Array [
  Object {
    "type": "beethovanAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchConversions 1`] = `
Array [
  Object {
    "type": "beethovanConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions fetchConversions 2`] = `
Object {
  "timestamp": 1234567890,
  "transactionHash": "aaa",
}
`;

exports[`actions fetchConversions 3`] = `
Object {
  "timestamp": 0,
  "transactionHash": "ccc",
}
`;

exports[`actions fetchExchangePrices 5 1`] = `
Array [
  Object {
    "type": "beethovanExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions fetchExchangePrices 60 1`] = `
Array [
  Object {
    "type": "beethovanExchangePrices",
    "value": Array [
      "test",
      60,
      888967890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions getAddresses 1`] = `
Array [
  Object {
    "type": "beethovanAddresses",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions getStates 1`] = `
Array [
  Object {
    "type": "beethovanStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions refresh 1`] = `
Array [
  Object {
    "type": "beethovanStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "beethovanExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "beethovanAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "beethovanConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions statesUpdate 1`] = `
Object {
  "type": "beethovanStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "type": "beethovanSubscription",
    "value": 0,
  },
  Object {
    "type": "beethovanSubscription",
    "value": 123,
  },
  Object {
    "type": "beethovanStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "beethovanExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "beethovanAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "beethovanConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions subscriptionUpdate 1`] = `
Object {
  "type": "beethovanSubscription",
  "value": 123,
}
`;
